atividade SO e LP

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 /linguagem-de-programacao/exercicio-complementares-dois/comissao-vendedor/target/
+/linguagem-de-programacao/exercicio-complementares-dois/vendedor-comissao/target/
