--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /linguagem-de-programacao/exercicio-complementares-dois/comissao-vendedor/target/
 /linguagem-de-programacao/exercicio-complementares-dois/vendedor-comissao/target/
+/linguagem-de-programacao/exercicio-complementares-dois/projeto-jogo/target/
+/linguagem-de-programacao/exercicio-complementares-dois/vinicius-silva-c3/target/
