projeto utilizando react

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /linguagem-de-programacao/exercicio-complementares-dois/vendedor-comissao/target/
 /linguagem-de-programacao/exercicio-complementares-dois/projeto-jogo/target/
 /linguagem-de-programacao/exercicio-complementares-dois/vinicius-silva-c3/target/
+/linguagem-de-programacao/exercicio-complementares-dois/DesafioConversao/target/
